small bug fixes

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Welcome to AADUT - The Automate Application Deployment and Update Tool</h1>
-    <p>Please login or select create new account:</p>
+    <p>Please login or create new account:</p>
     <form action="login" method="post">  
         Username:<input type="text" name="username"/><br/><br/>  
         Password:<input type="password" name="userpass"/><br/><br/>  
